--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol> Shopping List
+		<li> Google Pixel</li>
+		<li> New Laptop </li>
+		<li> Bike </li>
+	</ol>
+	<ul> Holiday List
+		<li> Dharmshala</li>
+		<li> Gulmarg </li>
+		<li> Coorg </li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
