--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol> Shopping List
-		<li> Google Pixel</li>
-		<li> New Laptop </li>
-		<li> Bike </li>
+		<li data-ns-test = "shoppingList"> Google Pixel</li>
+		<li data-ns-test = "shoppingList"> New Laptop </li>
+		<li data-ns-test = "shoppingList"> Bike </li>
 	</ol>
 	<ul> Holiday List
-		<li> Dharmshala</li>
-		<li> Gulmarg </li>
-		<li> Coorg </li>
+		<li data-ns-test = "holidayList"> Dharmshala</li>
+		<li data-ns-test = "holidayList"> Gulmarg </li>
+		<li data-ns-test = "holidayList"> Coorg </li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
